fix SpotBugs